--- a/src/movies/views/layout.hbs
+++ b/src/movies/views/layout.hbs
@@ -1,43 +1,8 @@
 <!DOCTYPE html>
 <head>
 <title></title>
-<style>
-html, body {
-	height: 100%;
-}
-
-body {
-	font-family: verdana, sans-serif;
-	font-size: 1.5em;
-	background: linear-gradient({{favColor}}, #fff);
-	text-align: center;
-	line-height: 1.5;
-}
-
-form {
-	margin: auto;
-}
-
-select, input {
-	font-size: 1em;
-}
-
-section {
-	margin-top: 0.5em;
-}
-
-textarea {
-	font-family: Courier, monospace;
-	font-size: 0.65em;
-	width: 65%;
-	height: 65%;
-}
-
-nav {
-	margin-bottom: 1em;
-	font-weight: bold;
-}
-</style>
+<link rel="stylesheet" href="css/main.css">
+<script src="http://code.jquery.com/jquery-1.6.2.min.js"></script>   
 </head>
 <body>
 	<h2>Let's Watch Some Movies</h2>
