[add] add movie.

--- a/src/movies/views/movie.hbs
+++ b/src/movies/views/movie.hbs
@@ -1,3 +1,4 @@
+<h2>Let's Watch Some Movies</h2>
 <div class="form-container">
     <form action="/movie">
         <label for="director">Director</label>
@@ -28,3 +29,4 @@
         </tbody>
     </table>
 </div>
+<h3><a href="/movie/add">Add Movie</a></h3>
