--- a/src/movies/views/layout.hbs
+++ b/src/movies/views/layout.hbs
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <head>
 <title></title>
-<link rel="stylesheet" href="css/main.css">
+<link rel="stylesheet" href="/css/main.css">
 <script src="http://code.jquery.com/jquery-1.6.2.min.js"></script>   
 </head>
-<body>
-	<h2>Let's Watch Some Movies</h2>
+<body>	
 	{{{body}}}
 </body>
 </head>
