[add] add part6. session.

--- a/src/movies/views/movie.add.hbs
+++ b/src/movies/views/movie.add.hbs
@@ -1,7 +1,7 @@
 <h2>Add a Movie</h2>
 <h2>Movie info:</h2>
 <div class="form-container">
-    <form action="/movie/add" method="POST">           
+    <form action="/movies/add" method="POST">           
         <input type="text" name="title" />
         <label for="director">by</label>
         <input type="text" name="director" />
